Fix footer alignment and add CSS class for logged in user

--- a/frontend/src/components/sidemenu.module.css
+++ b/frontend/src/components/sidemenu.module.css
@@ -110,6 +110,11 @@
     /* transition: max-width 0.5s ease; */
 }
 
+.logged {
+    word-wrap: break-word;
+    white-space: normal !important;
+}
+
 .side-menu li span:hover {
     color: #9c88ff;
     /* Change this to the color you want on hover */
